--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "^3.0",
         "zeuxisoo/slim-whoops": "^0.6.0",
         "slim/php-view": "2.2.0",
-        "bryanjhv/slim-session": "3.1.1"
+        "bryanjhv/slim-session": "3.1.1",
+        "slim/flash": "0.2.0"
     }
 }
