--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "zeuxisoo/slim-whoops": "^0.6.0",
         "slim/php-view": "2.2.0",
         "bryanjhv/slim-session": "3.1.1",
-        "slim/flash": "0.2.0"
+        "slim/flash": "0.2.0",
+        "projek-xyz/slim-plates": "v0.2.2"
     }
 }
