--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "slim/php-view": "2.2.0",
         "bryanjhv/slim-session": "3.1.1",
         "slim/flash": "0.2.0",
-        "projek-xyz/slim-plates": "v0.2.2"
+        "projek-xyz/slim-plates": "v0.2.2",
+        "slim/pdo": "1.10.0"
     }
 }
