--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "projek-xyz/slim-plates": "v0.2.2",
         "slim/pdo": "1.10.0",
         "phpmailer/phpmailer": "v5.2.23",
-        "league/oauth2-client": "2.2.1"
+        "league/oauth2-client": "2.2.1",
+        "league/oauth2-google": "^2.0"
     }
 }
