# Improve SMS Notification # Strip Public Content # sms verification (token -> id_user) # add logger for sms api

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,21 @@ fabric.properties
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/phpstorm
+
+\.idea/
+
+sms_log_2017-10-06\.\.txt
+
+public/content/dokumen/dummy_1507291355\.pdf
+
+public/content/dokumen/dummy_1507291952\.pdf
+
+public/content/dokumen/dummy_1507291962\.pdf
+
+public/content/dokumen/dummy_1507292085\.pdf
+
+public/content/dokumen/dummy_1507292553\.pdf
+
+public/content/dokumen/dummy_1507292671\.pdf
+
+public/content/dokumen/dummy_1507292719\.pdf
