--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
         "league/oauth2-client": "2.2.1",
         "league/oauth2-google": "^2.0",
         "dompdf/dompdf": "^0.8.0"
+    },
+    "require-dev": {
+        "silalahi/slim-logger": "dev-master"
     }
 }
