--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ public/content/dokumen/dummy_1507292553\.pdf
 public/content/dokumen/dummy_1507292671\.pdf
 
 public/content/dokumen/dummy_1507292719\.pdf
+
+public/content/dokumen/
